--- a/styles.less
+++ b/styles.less
@@ -481,6 +481,7 @@ section#log-in, section#registration{
                 // filter: invert(37%) sepia(37%) saturate(13%) hue-rotate(335deg) brightness(94%) contrast(87%);
                 background-color: #a9a7a715;
                 transition: all 0.5s cubic-bezier(0.92, 0.01, 0.35, 0.99);
+                cursor: pointer;
             }
 
         }
