--- a/styles.less
+++ b/styles.less
@@ -838,11 +838,9 @@ footer{
     }
 
     .who-text{
-        padding-bottom: 30px;
+        padding-bottom: 20px;
+        font-size: 10px;
     }
-}
-
-@media screen and (max-width: 400px) {
 
     .div-hero{
         min-height: 0px;
@@ -853,28 +851,4 @@ footer{
         gap: 20px;
         padding:0px;
     }
-
-    // footer{
-    //     .contact-info{
-    //         flex-direction: column;
-    //         min-width: 150px;
-    //     }
-
-    // }
-    // footer{
-    //     flex-direction: column;
-    //     #footer-link{
-    //         order: 1;
-    //     }
-
-    //     #footer-contact{
-    //         order: 2;
-    //     }
-
-    //     #footer-law{
-    //         order: 3;
-    //     }
-    // }
-
 }
-
